# brusta

./: README.md
bridge/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  bridge.cpp  bridge.hpp
bridge/includes/: model.hpp
bridge/model/: DNN.cpp  RNN.cpp
bridge/src/: bridge.cpp
bridge/src/model/: DNN.cpp  RNN.cpp
cpp/: .gitignore  CMakeLists.txt  Dockerfile  README.md
cpp/bridge/: CMakeLists.txt
cpp/bridge/src/model/: DNN.cpp  RNN.cpp
cpp/includes/: handler.h  predict.h
cpp/includes/json/: json-forwards.h  json.h
cpp/src/: CMakeLists.txt  handler.cpp  jsoncpp.cpp  main.cpp  predict.cpp
go/: .gitignore  Makefile  README.md  handlers.go  main.go  model_example.go  model_test.go  routes.go
go/launcher/: .gitignore  CMakeLists.txt  Makefile  cmodel.cpp  cmodel.h  model.hpp  model_rnn.cpp  model_rnn.hpp
go/model/: eval.go  model.go
go/server/: server.go
scala/: .gitignore  README.md
scala/burner/sh/: run-server.sh
scala/burner/src/main/scala/: EvalJNI.scala  ManageRequest.scala  RunServer.scala
