CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
PROJECT(brusta-bridge)

SET(CMAKE_SHARED_LIBRARY_SUFFIX ".so")

FIND_PACKAGE(Torch REQUIRED)

# MODEL_TYPE should be RNN or DNN.
ADD_LIBRARY(bridge SHARED bridge.cpp ./model/${MODEL_TYPE}.cpp)
TARGET_LINK_LIBRARIES(bridge "${TORCH_LIBRARIES}")
SET_PROPERTY(TARGET bridge PROPERTY CXX_STANDARD 11)