CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
PROJECT(brusta-bridge)

INCLUDE_DIRECTORIES("./includes")

FIND_PACKAGE(Torch REQUIRED)

# MODEL_TYPE should be RNN or DNN.
ADD_LIBRARY(bridge SHARED ./src/bridge.cpp ./src/model/${MODEL_TYPE}.cpp)
TARGET_LINK_LIBRARIES(bridge "${TORCH_LIBRARIES}")
SET_PROPERTY(TARGET bridge PROPERTY CXX_STANDARD 11)
SET ( LIBRARY_OUTPUT_DIRECTORY lib ) 
